syntax = "proto3";

package user;

service UserService {
  rpc Create (UserPayload) returns (User);
  rpc FindByEmail (EmailRequest) returns (User);
  rpc FindById (IdRequest) returns (User);
}

message UserPayload {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string avatar = 5;
  repeated string role = 6;
}

message User {
  string _id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string avatar = 5;
  repeated string role = 6;
}

message EmailRequest {
  string email = 1;
}

message IdRequest {
  string id = 1;
}
